# opdscli

./: .gitignore  AGENTS.md  CLAUDE.md-tasks.md  README.md  opdscli.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
homebrew/: opdscli.rb
src/opdscli/: __init__.py  __main__.py  cli.py  config.py  http.py  opds.py
src/opdscli/commands/: catalog.py  download.py  latest.py  search.py
tests/: conftest.py  test_cli.py  test_config.py  test_http.py  test_opds.py
tests/black_box/: index.md  quickstart_test.md
tests/fixtures/: acquisition_feed.xml  empty_feed.xml  missing_fields_feed.xml  navigation_feed.xml  opensearch.xml
